--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "body-parser": "^1.18.3",
     "clarifai": "^2.9.0",
     "cors": "^2.8.4",
+    "event-stream": "3.3.4",
     "express": "^4.16.3",
     "knex": "^0.15.2",
     "pg": "^7.6.1"
